--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
             <button type="button">Отправить форму</button>
             <button type="reset">Очистить форму</button>
         </form>
+        <iframe src="https://www.opendrive.com/player/OThfNDE4MzQ4NDNfNWhWUEs" height="25" width="297" style="border:0" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
 </body>
+
 </html>
