--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 clout - ИнОпЛаНетНый ДвИж
             </figcaption>
         </figure>
-        <audio src="clout ИнОпЛаНетНый ДвИж.m4a" controls loop></audio>
+        <iframe src="https://www.opendrive.com/player/OThfNDE4MzQ4NDRfNmF2cDc" height="25" width="297" style="border:0" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
     </p>
     <p>
         <figure>
@@ -26,9 +26,17 @@
                 xxxmanera - USB
             </figcaption>
         </figure>
-        <audio src="xxxmanera - Topic - usb (prod. by htpf).mp3" loop controls></audio>
+        <iframe src="https://www.opendrive.com/player/OThfNDE4MzQ4NTBfdHpiQ2k" height="25" width="297" style="border:0" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
     </p>
-    <audio src="Kai_Angel,_9mice,_Дима_Ицков,_Дима_Ицков,_Сергей_Д.mp3" controls></audio>
+    <p>
+        <figure>
+            <img src="https://images.genius.com/dafab652e9d57ed515656b0d2a062e3f.1000x1000x1.png" alt="xxxmanera - USB" width="400">
+            <figcaption>
+                Kai Angel & 9mice - AQUAFINA
+            </figcaption>
+        </figure>
+        <iframe src="https://www.opendrive.com/player/OThfNDE4MzQ4NTJfdlBrZHk" height="25" width="297" style="border:0" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+    </p>
     <p>
         Жуки смотреть онлайн бесплатно <a href="https://rutube.ru/video/2ef6c76f797a803f88980667635aa3db/" target="_blank"> <img src="https://pic.uma.media/pic/cardimage/92/ce/92ce02aac26c47fe0e47bc4040c8cc7c.jpg" alt="" width="500"> </a> 
     </p>
@@ -50,7 +58,6 @@
             <button type="button">Отправить форму</button>
             <button type="reset">Очистить форму</button>
         </form>
-        <iframe src="https://www.opendrive.com/player/OThfNDE4MzQ4NDNfNWhWUEs" height="25" width="297" style="border:0" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
-</body>
-
+        
+    </body>
 </html>
