--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p>
         Жуки смотреть онлайн бесплатно <a href="https://rutube.ru/video/2ef6c76f797a803f88980667635aa3db/" target="_blank"> <img src="https://pic.uma.media/pic/cardimage/92/ce/92ce02aac26c47fe0e47bc4040c8cc7c.jpg" alt="" width="500"> </a> 
     </p>
-    <div id="macan"><video src="IMG_0191.MP4" controls></video></div>
+    <div id="macan"><video src="https://www.youtube.com/watch?v=OtfCmoZY6vc" controls></video></div>
     <!-- <a href="mailto:something@gmail.com">something@gmail.com</a> Ссылка на телефон или -->
     <p><button type="button"><h1>кнопка</h1></button></p>
     <form>
@@ -61,4 +61,5 @@
         
     </body>
 </html>
+
 
