--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             <button type="button">Отправить форму</button>
             <button type="reset">Очистить форму</button>
         </form>
-        
+        <div class="tex"><h1>Текст</h1></div>
     </body>
 </html>
+
 
 
 
