--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
             <button type="reset">Очистить форму</button>
         </form>
         <div class="tex"><h1>Текст</h1></div>
+        <style>
+            .tex {
+                color: greenyellow
+            }
+        </style>
     </body>
 </html>
+
 
 
 
