--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
         <div class="tex"><h1>Текст</h1></div>
         <style>
             .tex {
-                color: greenyellow
-            }
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
         </style>
     </body>
 </html>
+
 
 
 
