--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="47dc7bfb95da7fd3dfe53ee44ca7f524.jpg" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&family=Rubik+Distressed&display=swap" rel="stylesheet">
     <title>Trying</title>
 </head>
 <body>
@@ -68,6 +69,7 @@
         </style>
     </body>
 </html>
+
 
 
 
