--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="47dc7bfb95da7fd3dfe53ee44ca7f524.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Pacifico&family=Rubik+Distressed&display=swap" rel="stylesheet">
     <title>Trying</title>
 </head>
@@ -60,15 +61,9 @@
             <button type="reset">Очистить форму</button>
         </form>
         <div class="tex"><h1>Текст</h1></div>
-        <style>
-            .tex {
-    font-family: "Pacifico", cursive;
-    font-weight: 400;
-    font-style: normal;
-}
-        </style>
     </body>
 </html>
+
 
 
 
